--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,16 @@
     "authors": [
         {
             "name": "Hadi",
-            "email": "hadicse@gmail.com"
+            "email": "me@habibhadi.com"
         }
     ],
     "require-dev": {
         "phpunit/phpunit": "^9.2"
     },
     "autoload": {
-        "psr-4": {"Roolith\\": "src/"}
+        "psr-4": {"Roolith\\Route\\": "src/"}
     },
     "license": "MIT",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"minimum-stability": "stable"
 }
