--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
         "psr-4": {"Roolith\\Route\\": "src/"}
     },
     "license": "MIT",
-	"version": "1.0.2",
-	"minimum-stability": "stable"
+	"version": "1.0.3",
+	"minimum-stability": "stable",
+    "require": {
+        "ext-json": "*"
+    }
 }
