--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "phpunit/phpunit": "^9.2"
     },
     "autoload": {
-        "psr-4": {"Roolith\\Route\\": "src/", "Demo\\": "demo/"}
+        "psr-4": {"Roolith\\Route\\": "src/"}
     },
     "license": "MIT",
-	"version": "1.0.10",
+	"version": "1.0.11",
 	"minimum-stability": "stable",
     "require": {
         "ext-json": "*",
